<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout">

    <ImageView
        android:id="@+id/background_auth"
        android:layout_width="412dp"
        android:layout_height="400dp"
        android:background="@drawable/top_rounded_shape"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_auth_github"
        android:layout_width="360dp"
        android:layout_height="68dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/button_authentication_accessibility"
        app:layout_constraintBottom_toTopOf="@+id/button_auth_anonymous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/button_auth_anonymous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_text_authentication_anonymous"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_auth_github_text" />

    <TextView
        android:id="@+id/button_auth_github_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:text="@string/button_text_authentication_github"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_auth_github"
        app:layout_constraintEnd_toEndOf="@id/button_auth_github"
        app:layout_constraintStart_toEndOf="@id/button_auth_line"
        app:layout_constraintTop_toTopOf="@+id/button_auth_github" />

    <TextView
        android:id="@+id/title_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_authentication"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_auth" />

    <TextView
        android:id="@+id/description_auth"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_authentication"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_auth" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_icon_accessibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/icon_github"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:clickable="false"
        android:contentDescription="@string/github_icon_accessibility"
        app:layout_constraintBottom_toBottomOf="@+id/button_auth_github"
        app:layout_constraintStart_toStartOf="@+id/button_auth_github"
        app:layout_constraintTop_toTopOf="@+id/button_auth_github"
        app:srcCompat="@drawable/github_icon" />

    <TextView
        android:id="@+id/button_auth_line"
        android:layout_width="5dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:background="@color/white"
        android:clickable="false"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/button_auth_github"
        app:layout_constraintStart_toEndOf="@+id/icon_github" />

</androidx.constraintlayout.widget.ConstraintLayout>